Updated index page

--- a/views/index.jade
+++ b/views/index.jade
@@ -2,4 +2,6 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  p To record load for a given server use #{record}
+  p Display loads for a given server use #{average}
+  p To see JSON example use #{example}
